--- a/units/style.scss
+++ b/units/style.scss
@@ -1,218 +1,377 @@
-.header{
-    &__ul{
-        list-style: none;
-        display: flex;
-        justify-content: right;
-        gap: 20px;
-        padding: 50px;
-    }
-    &__a{
-        text-decoration: none;
-        font-weight: bold;
-        color: black;
-    }
-    &__nav {
-        transform: translateY(-20px);
-        opacity: 0;
-        pointer-events: none;
-        transition: transform 0.3s ease, opacity 0.3s ease;
-    }
+@use "sass:math";
+@use "medias/scss/fonts";
+@use "medias/scss/couleurs";
 
-    &__nav.is-open {
-        transform: translateY(0);
-        opacity: 1;
-        pointer-events: auto;
-    }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+/* =========================
+   HEADER (mobile first)
+========================= */
 
 .header {
-    &__nav {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background-color: #ade8f4;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #ade8f4;
 
-        transform: translateY(-20px);
+  &__logo {
+    font-weight: bold;
+    text-decoration: none;
+    color: black;
+  }
+
+  /* ----- Burger ----- */
+  &__burger {
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 1000;
+
+    span {
+      display: block;
+      width: 26px;
+      height: 3px;
+      background-color: #000;
+      margin: 5px 0;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    &.is-open {
+      span:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+      }
+
+      span:nth-child(2) {
         opacity: 0;
-        pointer-events: none;
-        transition: transform 0.3s ease, opacity 0.3s ease;
-    }
+      }
 
-    &__nav.is-open {
-        transform: translateY(0);
-        opacity: 1;
-        pointer-events: auto;
+      span:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+      }
     }
-}
+  }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+  /* ----- Navigation ----- */
+  &__nav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
     background-color: #ade8f4;
-    position: relative;
 
+    transform: translateY(-20px);
+    opacity: 0;
+    pointer-events: none;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+
+    &.is-open {
+      transform: translateY(0);
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+
+  &__ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  &__a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+  }
+}
+
+/* =========================
+   HEADER – Desktop
+========================= */
+
+@media (min-width: 768px) {
+  .header {
     &__burger {
-        background: none;
-        border: none;
-        cursor: pointer;
-
-        span {
-            display: block;
-            width: 26px;
-            height: 3px;
-            background-color: #000;
-            margin: 5px 0;
-            transition: 0.3s;
-        }
+      display: none;
     }
 
     &__nav {
-
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background-color: #ade8f4;
-    }
-
-    &__nav.is-open {
-        display: block;
+      position: static;
+      transform: none;
+      opacity: 1;
+      pointer-events: auto;
+      background-color: transparent;
     }
 
     &__ul {
-        list-style: none;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        text-align: center;
+      flex-direction: row;
+      gap: 30px;
+      padding: 0;
     }
-
-    &__a {
-        text-decoration: none;
-        font-weight: bold;
-        color: black;
-    }
-}
-/* Animation du menu burger */
-.header {
-    &__burger {
-        position: relative;
-        z-index: 1000;
-
-        span {
-            transition: transform 0.3s ease, opacity 0.3s ease;
-        }
-
-        &.is-open {
-            span:nth-child(1) {
-                transform: translateY(8px) rotate(45deg);
-            }
-
-            span:nth-child(2) {
-                opacity: 0;
-            }
-
-            span:nth-child(3) {
-                transform: translateY(-8px) rotate(-45deg);
-            }
-        }
-    }
-}
-/*Pour tablette et plus on enlève le menu burger*/
-@media (min-width: 360px) {
-    .header {
-        &__burger {
-            display: none;
-        }
-
-        &__nav {
-            position: static;
-            transform: none;
-            opacity: 1;
-            pointer-events: auto;
-            background-color: transparent;
-        }
-
-        &__ul {
-            flex-direction: row;
-            gap: 30px;
-            padding: 0;
-        }
-    }
-    .footer {
-        text-align: left;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 30px 50px;
-
-        &__contact {
-            flex-direction: row;
-            gap: 30px;
-            margin-bottom: 0;
-            list-style: none;
-        }
-
-        &__social {
-            margin-bottom: 0;
-        }
-    }
+  }
 }
 
-/*Pour téléphone*/
-@media (max-width: 360px) {
-    .header{
-        &__ul{
-            flex-direction: column;
-            text-align: center;
-        }
-    }
-}
+/* =========================
+   FOOTER
+========================= */
 
-
-/*FOOTER*/
 .footer {
-    background-color: #ade8f4;
-    color: #000;
-    padding: 20px;
-    text-align: center;
-    font-size: 14px;
+  background-color: #ade8f4;
+  color: #000;
+  padding: 20px;
+  font-size: 14px;
+  text-align: center;
+
+  &__contact {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 15px;
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
+
+  &__icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  &__social {
+    margin-bottom: 15px;
+
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  &__copyright {
+    display: block;
+    font-size: 12px;
+    color: #333;
+  }
+}
+
+/* =========================
+   FOOTER – Desktop
+========================= */
+
+@media (min-width: 768px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 50px;
+    text-align: left;
 
     &__contact {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 15px;
-
-        & .footer__info {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 8px;
-
-            & img.footer__icon {
-                width: 20px;
-                height: 20px;
-            }
-        }
+      flex-direction: row;
+      gap: 30px;
+      margin-bottom: 0;
     }
 
     &__social {
-        margin-bottom: 15px;
+      margin-bottom: 0;
+    }
+  }
+}
 
-        a img {
-            width: 24px;
-            height: 24px;
+/* =========================
+   Media – Mobile
+========================= */
+.media{
+        margin: 1.5em auto 0 auto;
+        
+        &__video-promo{
+            width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 5px;
+        }
+        
+        &__conteneur{
+          margin: 0 auto;
+          max-width: 90%;
+        }
+
+        &__texte{
+            padding-top: 10px;
+            font-size: 24px;
+            font-family: "Kanit", sans-serif;
+            font-weight: 400;
+        }
+
+        &__contact{
+          background-color: couleurs.$violet;
+          color: white;
+          font-family: "Kanit", sans-serif;
+          font-weight: 700;
+          padding: 1em 12px;
+          margin-top: 10px;
+          border-radius: 10px;
+          border: none;
+          transition: all .3s ;
+        }
+        &__contact:hover{
+          cursor: pointer;
+          background-color: #3d48df;
+          scale: 2em;
+          border: #1d2ae4 solid 3px;
         }
     }
+  /* =========================
+   Media – Desktop
+========================= */
 
-    &__copyright {
-        display: block;
-        font-size: 12px;
-        color: #333;
-    }
+@media (min-width: 768px) {
+  .media{
+    display: flex;
+    align-items: center;      // Centre verticalement le texte par rapport à l'image
+    justify-content: space-between; 
+    max-width: 1200px;        // Une largeur max pour ne pas que ça s'étale trop
+    margin: 3em auto;         // Centre la section entière dans la page
+    gap: 40px;
+  
+  &__video-promo{
+    margin: 0 auto;
+  }
+
+  &__conteneur {
+    padding-left: 20px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
+}
+/* btn prendre rdv */
+.buttons {
+  margin-top: 20px;
+  text-align: center;
+  border-radius:30px;
+}
+
+$cyan: #0505A9;
+$dark: #FFFFFF;
+$borderW: 2px;
+
+.blob-btn {
+  $numOfBlobs: 4;
+  z-index: 1;
+  position: relative;
+  padding: 20px 30px;
+  margin-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: $cyan;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  transition: color 0.5s;
+  cursor: pointer;
+  border-radius:30px;
+  
+  &:before {
+    content: "";
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: $borderW solid $cyan;
+    border-radius:30px;
+  }
+  
+  &:after {
+    content: "";
+    z-index: -2;
+    position: absolute;
+    left: $borderW*1.5;
+    top: $borderW*1.5;
+    width: 100%;
+    height: 100%;
+
+    transition: all 0.3s 0.2s;
+    border-radius:30px;
+  }
+  
+  &:hover {
+    color: $dark;
+    border-radius:30px;
+    
+    &:after {
+      transition: all 0.3s;
+      left: 0;
+      top: 0;
+      border-radius:30px;
+    }
+  }
+  
+  &__inner {
+    z-index: -1;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius:30px;
+    background:#ffffff;
+  }
+  
+  // additional container created, because in FF blobs are breaking overflow:hidden of element with svg gooey filter
+  &__blobs {
+    position: relative;
+    display: block;
+    height: 100%;
+    filter: url('#goo');
+  }
+  
+  &__blob {
+    position: absolute;
+    top: $borderW;
+    width: 100% / $numOfBlobs;
+    height: 100%;
+    background: $cyan;
+    border-radius: 100%;
+    transform: translate3d(0,150%,0) scale(1.7);
+    transition: transform 0.45s;
+    
+    @supports(filter: url('#goo')) {
+      transform: translate3d(0,150%,0) scale(1.4);
+    }
+    
+    @for $i from 1 through $numOfBlobs {
+      &:nth-child(#{$i}) {
+        left: ($i - 1) * (120% / $numOfBlobs);
+        transition-delay: ($i - 1) * 0.08s;
+      }
+    }
+    
+    .blob-btn:hover & {
+      transform: translateZ(0) scale(1.7);
+      
+      @supports(filter: url('#goo')) {
+        transform: translateZ(0) scale(1.4);
+      }
+    }
+  }
+}
+
